force-app/main/default/objects/pse__ERP_PSA_Messaging_Settings__c/fields/pse__Automatically_Approve_API_Timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Automatically_Approve_API_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, PSA automatically approves timecards created via the PSA Assignment API when a relevant approval process exists on the Timecard object.</description>
    <inlineHelpText>If selected, PSA automatically approves timecards created via the PSA Assignment API when a relevant approval process exists on the Timecard object.</inlineHelpText>
    <label>Automatically Approve API Timecards</label>
    <type>Checkbox</type>
</CustomField>