force-app/main/default/objects/pse__ERP_PSA_Messaging_Settings__c/fields/pse__Create_Records_as_Active_Resources__c.field-meta.xml
<CustomField>
    <fullName>pse__Create_Records_as_Active_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, PSA creates active resource records when API Resource Correlation ID is populated. API Resource Correlation ID is always populated when details are entered via the API.</description>
    <inlineHelpText>If selected, PSA creates active resource records when API Resource Correlation ID is populated. API Resource Correlation ID is always populated when details are entered via the API.</inlineHelpText>
    <label>Create Records as Active Resources</label>
    <type>Checkbox</type>
</CustomField>