force-app/main/default/objects/pse__ERP_PSA_Messaging_Settings__c/fields/pse__Update_Resource_Employment_Dates__c.field-meta.xml
<CustomField>
    <fullName>pse__Update_Resource_Employment_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected and API Resource Correlation ID is populated, PSA updates start date or last date when a resource&apos;s employment status becomes active or terminated. API Resource Correlation ID is always populated when details are entered via the API.</description>
    <inlineHelpText>If selected and API Resource Correlation ID is populated, PSA updates start date or last date when a resource&apos;s employment status becomes active or terminated. API Resource Correlation ID is always populated when details are entered via the API.</inlineHelpText>
    <label>Update Resource Employment Dates</label>
    <type>Checkbox</type>
</CustomField>