force-app/main/default/objects/pse__ERP_PSA_Messaging_Settings__c/fields/pse__Worker_Account_Filter_Values__c.field-meta.xml
<CustomField>
    <fullName>pse__Worker_Account_Filter_Values__c</fullName>
    <description>ERP message key value(s) used for filtering worker messages for creating Person Accounts. Text and Picklist fields support multiple, semicolon-delimited values.</description>
    <inlineHelpText>ERP message key value(s) used for filtering worker messages for creating Person Accounts. Text and Picklist fields support multiple, semicolon-delimited values.</inlineHelpText>
    <label>Worker Account Filter Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>